# camcardsync

./: .gitignore  ChangeLog  Makefile.am  Makefile.in  NEWS  TODO  camcardsync.cpp  camcardsync.desktop  camsession.cpp  camsession.h  config.h  config.h.in  configdb.cpp  configdb.h  configure  configure.ac  configure.scan  daystamp.h  debug.cpp  debug.h  dirtest.cpp  exclusions.cpp  exclusions.h  fileext.cpp  fileext.h  fileexteditor.cpp  fileexteditor.h  halgetmountpoint.cpp  halgetmountpoint.h  imagefile.cpp  imagefile.h  libtool  mainwindow.cpp  mainwindow.h  pathsupport.cpp  pathsupport.h  prefsdialog.cpp  prefsdialog.h  progress.h  progressbar.cpp  (+2 more)
po/: ChangeLog  Makefile.in  Makevars  Makevars.template  POTFILES  POTFILES.in  camcardsync.pot
